--- a/moad-work/css/app.css
+++ b/moad-work/css/app.css
@@ -5,16 +5,24 @@ body{
     font-family: 'Montserrat';
 }
 .container{
+    width:1300px;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 header{
     background-color: #A80038;
     display: flex;
-    position: absolute;
+    position: fixed;
     z-index: 20;
     width:100%;
-}
+    box-shadow: 0px 0px 50px rgb(71, 23, 39);
 
+
+}
+header .container{
+    display: flex;
+}
 p{
     font-size: .9em;
     line-height: 1.6em;
@@ -35,8 +43,8 @@ a{
 }
 
 .logo-container{
-    margin-left:10%;
-    margin-right: 10%;
+    margin-left:0;
+    margin-right: 500px;
     margin-top: auto;
     margin-bottom: auto;
     padding-top: .5em;
@@ -74,7 +82,6 @@ nav ul li a{
     margin-right: -1rem;
     margin-top: -.2em;
 }
-
 .intro-image{
     width:100%;
     position: relative;
@@ -92,16 +99,7 @@ nav ul li a{
     opacity: 80%;
     border-radius: 10px;
 }
-.zone-events{
-    background-color: #91777D;
-    width: 30%;
-    position: absolute;
-    z-index: 10;
-    top:30%;
-    right:10%;
-    opacity:80%;
-    border-radius: 10px;
-}
+
 .zone-info h1{
     font-size: 300%;
     color: white;
@@ -126,24 +124,7 @@ nav ul li a{
     color: white;
     font-size: 120%;
 }
-.scroll{
-    position:absolute;
-    top: 100%;
-    left: 50%;
-}
 
-.white-box{
-    background-color: white;
-    position: absolute;
-    top: 110%;
-    padding-top: 10em;
-    width: 100%;
-}
-.container2{
-    width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-}
 .about div h1{
     font-size: 200%;
 }
@@ -167,7 +148,6 @@ nav ul li a{
 
 footer{
     background-color: #500513;
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
